# OpenWaterThermalAnalyst

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.prod  README.md  WARP.md  docker-compose.yml  env.example  pyproject.toml  tox.ini
config/: example.yaml
src/open_water_thermal_analyst/: agents.py  ai.py  alerts.py  api.py  atmospheric_correction.py  cli.py  compliance.py  config.py  datasette_export.py  ecology.py  imagery.py  scada.py  weather.py
src/open_water_thermal_analyst/hydrodynamics/: plume_model.py
src/open_water_thermal_analyst/ml/: models.py
src/open_water_thermal_analyst/reports/: npdes_report.py
tests/: test_alerts.py  test_cli.py  test_compliance.py  test_imagery.py  test_plume_model.py
